Update README with team info, story cards, test coverage, and project structure